<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/standard_Bottom_Sheet_Delete"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_gravity="bottom"
    android:background="@drawable/infocard"
    app:behavior_peekHeight="130dp"
    app:layout_anchor="@+id/standard_Bottom_Sheet"
    app:layout_anchorGravity="center"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/delete_message"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="140dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/LightGrey"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="140dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/RoyaltBlue"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:cornerRadius="25dp" />

    </LinearLayout>

</FrameLayout>

